--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -77,4 +70,11 @@
   align-items: center;
   justify-content: center;
   font-size: 1.5rem;
+}
+
+
+/* Content-Centered  */
+
+.Content-Centered title{
+
 }
